home animation overflow fix

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,3 +1,6 @@
+.home{
+  overflow-x: hidden;
+}
 .reveal {
     position: relative;
     opacity: 0;
